...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/adoptante_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apoptante"
            app:layout_constraintBottom_toTopOf="@+id/rescatista_Btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
...
