...
            android:text="@string/action_login"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Btn_cancel"
            android:text="@string/action_register"
            android:textAllCaps="false"/>

    </LinearLayout>

        <ProgressBar
...
