...
                    android:textColorHint="#FFA040"
                    android:inputType="textPassword"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/adopter_login_Btn"
                    android:text="@string/action_login"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
